<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tv_title_things_list_widget_configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/title_activity_things_list_widget_configuration"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.timecat.ui.block.view.StablerRecyclerView
        android:id="@+id/rv_types_list_things_list_widget_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black_14p" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="透明度:" />

        <SeekBar
            android:id="@+id/sb_app_widget_alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_alpha_header_as_bt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selectable_item_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/things_list_config_alpha_header"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_alpha_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_simple_view_as_bt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selectable_item_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/things_list_config_simple_view"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_simple_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_confirm_as_bt_things_list_config"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/selectable_item_background"
        android:onClick="onConfirmClicked"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"
        android:paddingRight="12dp"
        android:paddingBottom="8dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textStyle="bold" />

</LinearLayout>