<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_accent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/view_status_bar"
        android:background="@color/app_accent"
        app:contentInsetStart="72dp"
        app:titleTextColor="@color/black_54p" />

    <com.timecat.ui.block.view.StablerRecyclerView
        android:id="@+id/rv_things"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbar"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/rv_things_padding"
        android:paddingTop="6dp"
        android:paddingRight="@dimen/rv_things_padding"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:theme="@style/Theme.AppCompat.Light" />

    <View
        android:id="@+id/actionbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/actionbar"
        android:background="@drawable/actionbar_shadow" />

    <FrameLayout
        android:id="@+id/fl_app_widget_preview_and_ui_config"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_app_widget_preview_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_app_widget_preview_background"
            android:scaleType="centerCrop" />

        <com.timecat.ui.block.view.StablerRecyclerView
            android:id="@+id/rv_app_widget_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:overScrollMode="never" />

        <LinearLayout
            android:id="@+id/ll_widget_ui_config"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/black_14p"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/app_widget_config_alpha"
                android:textAllCaps="true"
                android:textColor="@color/white_86p" />

            <SeekBar
                android:id="@+id/sb_app_widget_alpha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt_finish_set_alpha_app_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:minWidth="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/act_finish"
                android:textColor="@color/white_86p" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
